--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ overflow-checks = false
 
 [build-dependencies]
 reqwest = { version = "0.12.9", features = ["blocking"] }
+[dependencies]
+regex = "1.11.1"
